<resources>
    //Log In

    <string name="app_name">TreeApp</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="registration">REGISTRATION</string>
    <string name="sign_in_with_email">Sign up with email</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="continue_as_a_guest">Continue as a guest</string>
    <string name="password_reset">Password reset</string>
    <string name="reset_msg">Reset link was sent to your email!</string>
    <string name="email_unconfirmed">Email is not confirmed.</string>
    <string name="authentication_failed">Authentication failed!</string>
    <string name="invalid_password_login">Invalid password!</string>
    <string name="enter_username">Enter your new username</string>


    //Registration

    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="step1">User data</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="profilepicture">Upload profile picture \n (Optional)</string>
    <string name="step1_next_button">Account Details</string>
    <string name="step2_next_button">Email Confirmation</string>
    <string name="step3_next_button">Next</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="username">Username</string>
    <string name="please_confirm">Please confirm your email address</string>
    <string name="email_sent">Confirmation email was sent to:</string>
    <string name="email_check">Please check your mail and click on confirmation link to continue.</string>
    <string name="email_not_sent">Mail not sent?</string>
    <string name="resend_mail">Resend Mail</string>
    <string name="AllDone">All Done!</string>
    <string name="AccountCreated">Account created successfully!</string>
    <string name="PlantATree">Plant a tree, don\'t be a stump</string>
    <string name="NewsFeed">News Feed</string>
    <string name="DatePicker">Birth Date:</string>
    <string name="title_activity_login_test">LoginTest</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="no_name">Please enter your name!</string>
    <string name="no_surname">Please enter your surname!</string>
    <string name="no_username">Please enter your username!</string>
    <string name="no_email">Please enter an e-mail!</string>
    <string name="username_taken">This username is already taken!</string>
    <string name="no_password">Please enter a password!</string>
    <string name="invalid_password">Password must be at least 6 characters long containing at least one capital letter and one number!</string>
    <string name="invalid_email">Email is not valid, please check it!</string>
    <string name="invalid_password_repeat">Repeated password is incorrect!</string>
    <string name="emailverified">Email is not verified!</string>

    <string name="about_tree">Tell the story about the tree:</string>
    <string name="plant_tree">PLANT TREE</string>
    <string name="discard">DISCARD</string>
    <string name="type_hear">Add story about the tree...</string>
    <string name="put_on_map">Set location</string>
    <string name="take_photo">Take Photo</string>
    <string name="cancel">Cancel</string>
    <string name="choose_photo_from_gallery">Choose from Gallery</string>
    <string name="add_photo">Add Photo!</string>
    <string name="later">Later</string>
    <string name="dont_ask_again">Don\'t ask again!</string>
    <string name="later_pressed_time">Later pressed time</string>
    <string name="dialoge_desc">Dialogue description</string>
    <string name="we_request_again">Request again</string>
    <string name="give_permissions">Give permissions</string>
    <string name="permissions_required">Permission required</string>
    <string name="crop_image">Crop image</string>
    <string name="title_activity_post_map_view">Map</string>
    <string name="username_post">Username</string>
    <string name="post_description_post">Post description</string>

    <string name="title_activity_single_post_view">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Error">There was an error!</string>
    <string name="Error_loading_picture">There was an error during image load!</string>
    <string name="tree_description">More about this tree</string>
    <string name="comments">Comments</string>
    <string name="description">Description</string>
    <string name="points">points</string>

    <string name="module_name">Timeline view</string>
    <string name="registration_default_profile_picture">default_profile_picture.jpeg</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="leaderboard_item_number">Ranking number</string>
    <string name="leaderboard_item_points">Points</string>
    <string name="leaderboard_item_points_text">\u0020points</string>
    <string name="leaderboard_location_button">Choose location</string>
    <string name="leaderboard_apply_button">Apply location</string>



    <string name="large_text">

        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_leaderboard_location_mapview">Map</string>
    <string name="choose_location_button_timeline">Choose location</string>

</resources>