<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationStep2">

    <TextView
        android:id="@+id/btnLogInStep2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:onClick="OpenLogIn"
        android:text="@string/login"
        android:textColor="@color/tree_green"
        app:layout_constraintStart_toEndOf="@+id/lblloginStep2"
        app:layout_constraintTop_toBottomOf="@+id/btnStep2Next" />

    <TextView
        android:id="@+id/lblloginStep2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:forceDarkAllowed="false"
        android:text="@string/already_have_account"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStep2Next" />

    <ImageView
        android:id="@+id/imgViewStep2Step2"
        android:layout_width="58dp"
        android:layout_height="49dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="135dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/step2greenn" />

    <ImageView
        android:id="@+id/imgViewStep2Step3"
        android:layout_width="59dp"
        android:layout_height="49dp"
        android:layout_marginStart="214dp"
        android:layout_marginTop="135dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/step3white" />

    <ImageView
        android:id="@+id/imgViewStep2Step4"
        android:layout_width="59dp"
        android:layout_height="49dp"
        android:layout_marginStart="299dp"
        android:layout_marginTop="135dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/step4white" />

    <ImageView
        android:id="@+id/imgViewStep2Step1"
        android:layout_width="63dp"
        android:layout_height="51dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="135dp"
        android:onClick="OpenRegistrationStep1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/step1white" />

    <TextView
        android:id="@+id/lblStep2AccountDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="4dp"
        android:text="@string/step1_next_button"
        android:textColor="@color/tree_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarStep2" />

    <ProgressBar
        android:id="@+id/progressBarStep2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="317dp"
        android:layout_height="17dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="7dp"
        android:backgroundTint="@color/tree_green"
        android:progress="47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgViewStep2Step1" />

    <Button
        android:id="@+id/btnStep2Next"
        android:layout_width="318dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/tree_green"
        android:onClick="OpenRegistrationStep3"
        android:text="@string/step2_next_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBoxStep2PasswordRepeat" />

    <EditText
        android:id="@+id/txtBoxStep2Email"
        android:layout_width="318dp"
        android:layout_height="50dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="272dp"
        android:backgroundTint="@color/tree_green"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtBoxStep2Username"
        android:layout_width="318dp"
        android:layout_height="50dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/tree_green"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBoxStep2Email" />

    <EditText
        android:id="@+id/txtBoxStep2Password"
        android:layout_width="318dp"
        android:layout_height="50dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/tree_green"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBoxStep2Username" />

    <EditText
        android:id="@+id/txtBoxStep2PasswordRepeat"
        android:layout_width="318dp"
        android:layout_height="50dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/tree_green"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBoxStep2Password" />

    <ImageView
        android:id="@+id/imgViewStep1Top2"
        android:layout_width="422dp"
        android:layout_height="149dp"
        android:forceDarkAllowed="false"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backsmall"
        tools:layout_editor_absoluteX="-6dp" />

    <TextView
        android:id="@+id/lblStep1Registracija2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/registration"
        android:textColor="@color/tree_green"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgViewStep1Top2" />

    <ImageView
        android:id="@+id/imgViewStep1LogoSmall4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgViewStep1Top2"
        app:srcCompat="@drawable/logosmall" />

</androidx.constraintlayout.widget.ConstraintLayout>