<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationStep3">

    <TextView
        android:id="@+id/btnLogInStep3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:onClick="OpenLogIn"
        android:text="@string/login"
        android:textColor="@color/tree_green"
        app:layout_constraintStart_toEndOf="@+id/lblLogInStep3"
        app:layout_constraintTop_toBottomOf="@+id/btnStep3ResendMail" />

    <TextView
        android:id="@+id/lblLogInStep3"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        android:forceDarkAllowed="false"
        android:text="@string/already_have_account"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStep3ResendMail" />

    <Button
        android:id="@+id/btnStep3ResendMail"
        android:layout_width="318dp"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="68dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/tree_green"
        android:text="@string/resend_mail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imgViewStep3Top"
        android:layout_width="422dp"
        android:layout_height="149dp"
        android:forceDarkAllowed="false"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backsmall"
        tools:layout_editor_absoluteX="-6dp" />

    <TextView
        android:id="@+id/lblStep3Registracija"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/registration"
        android:textColor="@color/tree_green"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgViewStep3LogoSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logosmall" />

    <ImageView
        android:id="@+id/imgViewStep3Step2"
        android:layout_width="58dp"
        android:layout_height="49dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="135dp"
        android:onClick="OpenRegistrationStep2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/step2white" />

    <ImageView
        android:id="@+id/imgViewStep3Step3"
        android:layout_width="59dp"
        android:layout_height="49dp"
        android:layout_marginStart="214dp"
        android:layout_marginTop="135dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/step3green" />

    <ImageView
        android:id="@+id/imgViewStep3Step4"
        android:layout_width="59dp"
        android:layout_height="49dp"
        android:layout_marginStart="299dp"
        android:layout_marginTop="135dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/step4white" />

    <ImageView
        android:id="@+id/imgViewStep3Step1"
        android:layout_width="63dp"
        android:layout_height="51dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="135dp"
        android:onClick="OpenRegistrationStep1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/step1white" />

    <TextView
        android:id="@+id/lblStep2AccountDetails2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="4dp"
        android:text="@string/step2_next_button"
        android:textColor="@color/tree_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarStep3" />

    <ProgressBar
        android:id="@+id/progressBarStep3"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="317dp"
        android:layout_height="17dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="7dp"
        android:backgroundTint="@color/tree_green"
        android:progress="72"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgViewStep3Step1" />

    <TextView
        android:id="@+id/lblStep3PleaseCheck"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="59dp"
        android:text="@string/email_check"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btnStep3ResendMail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblStep3Email" />

    <TextView
        android:id="@+id/lblStep3Email"
        android:layout_width="321dp"
        android:layout_height="27dp"
        android:layout_marginTop="24dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/tree_green"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblStep3SentTo" />

    <TextView
        android:id="@+id/lblStep3ConfirmMail"
        android:layout_width="338dp"
        android:layout_height="41dp"
        android:layout_marginTop="32dp"
        android:text="@string/please_confirm"
        android:textAlignment="center"
        android:textColor="@color/tree_green"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/lblStep3SentTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/email_sent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblStep3ConfirmMail" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="135dp"
        android:layout_height="134dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblStep2AccountDetails2"
        app:srcCompat="@drawable/mail_icon" />

    <TextView
        android:id="@+id/lblStep3NotSent"
        android:layout_width="330dp"
        android:layout_height="23dp"
        android:layout_marginBottom="3dp"
        android:text="@string/email_not_sent"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btnStep3ResendMail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>