<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/general_margin"
    android:clickable="true"
    android:focusable="true"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/ranking_number"
            android:layout_width="27dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/general_margin"
            android:layout_marginEnd="@dimen/general_margin"
            android:layout_marginBottom="@dimen/general_margin"
            android:paddingTop="12dp"

            android:text="@string/leaderboard_item_number"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/cardview_light_background"></TextView>

        <ImageView
            android:id="@+id/profile_image_leaderboard"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="TODO"
            android:src="@android:drawable/ic_menu_report_image"></ImageView>

        <TextView
            android:id="@+id/username_leaderboard"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/general_margin"
            android:layout_marginEnd="@dimen/general_margin"
            android:layout_marginBottom="@dimen/general_margin"
            android:paddingTop="12dp"
            android:text="@string/username_post"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/cardview_light_background"></TextView>

        <TextView
            android:id="@+id/points"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/general_margin"
            android:layout_marginEnd="@dimen/general_margin"
            android:layout_marginBottom="@dimen/general_margin"
            android:paddingTop="12dp"
            android:text="@string/leaderboard_item_points"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/cardview_light_background"></TextView>
    </LinearLayout>



</androidx.cardview.widget.CardView>